web/src/snapshots/sagan_lints_web__catalog__tests__fixture_catalog.snap
---
source: web/src/catalog.rs
expression: html
---
<!DOCTYPE html>
<!--
Adapted from rust-clippy util/gh-pages/index_template.html at commit
9066dbb89ca01eddd591d03a2b4504ab28d7c26b. Clippy is licensed under
MIT OR Apache-2.0; see LICENSE-CLIPPY-MIT.
-->
<html lang="en"><head><meta charset="UTF-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/><meta name="description" content="Sagan's custom Rust lints for Dylint."><title>Sagan Lints</title><link id="githubLightHighlight" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.6.0/styles/github.min.css" disabled="true" /><link id="githubDarkHighlight" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.6.0/styles/github-dark.min.css" disabled="true" /><!-- The mdBook theme files are linked rather than copied because they use the MPL-2.0 License -->
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/rust-lang/mdBook@0.4.46/src/theme/css/variables.css"/><link id="styleHighlight" rel="stylesheet" href="https://cdn.jsdelivr.net/gh/rust-lang/mdBook@0.4.46/src/theme/highlight.css"><link id="styleNight" rel="stylesheet" href="https://cdn.jsdelivr.net/gh/rust-lang/mdBook@0.4.46/src/theme/tomorrow-night.css" disabled="true"><link id="styleAyu" rel="stylesheet" href="https://cdn.jsdelivr.net/gh/rust-lang/mdBook@0.4.46/src/theme/ayu-highlight.css" disabled="true"><link rel="stylesheet" href="style.css"><script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.6.0/highlight.min.js" defer></script><script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.6.0/languages/rust.min.js" defer></script><script src="script.js" defer></script></head><body><div id="settings-dropdown" class="dropdown"><button class="settings-icon" type="button" aria-label="Settings"></button><div class="settings-menu" tabindex="-1"><label class="setting-radio-name" for="theme-choice">Theme</label><select id="theme-choice"><option value="ayu">Ayu</option><option value="coal">Coal</option><option value="light">Light</option><option value="navy">Navy</option><option value="rust">Rust</option></select><label><input type="checkbox" id="disable-shortcuts"> <span>Disable keyboard shortcuts</span></label></div></div><script src="theme.js"></script><div class="container"><h1 class="page-header">Sagan Lints <span class="badge">Total number: 2</span></h1><nav class="report-links" aria-label="Documentation and reports"><a href="book/">Guide</a><a href="coverage/">Coverage</a><a href="benches/report/">Benchmarks</a></nav><noscript><div class="alert alert-danger" role="alert">Lints search and filtering only works with JS enabled. :(</div></noscript><div id="menu-filters"><div id="upper-filters"><div class="dropdown" data-filter="levels" tabindex="-1"><button type="button" class="btn-default dropdown-toggle">Lint levels <span id="levels-count" class="badge">2</span> <span class="caret"></span></button><ul class="dropdown-menu"><li class="checkbox"><button class="reset-all">All</button></li><li class="checkbox"><button class="reset-none">None</button></li><li role="separator" class="divider"></li><li class="checkbox"><label><input type="checkbox" name="warn" checked />Warn</label></li><li class="checkbox"><label><input type="checkbox" name="none" checked />None</label></li></ul></div><div class="dropdown" data-filter="groups" tabindex="-1"><button type="button" class="btn-default dropdown-toggle">Lint groups <span id="groups-count" class="badge">2</span> <span class="caret"></span></button><ul class="dropdown-menu"><li class="checkbox"><button class="reset-all">All</button></li><li class="checkbox"><button class="reset-default">Default</button></li><li class="checkbox"><button class="reset-none">None</button></li><li role="separator" class="divider"></li><li class="checkbox"><label><input type="checkbox" name="serde" checked />serde</label></li><li class="checkbox"><label><input type="checkbox" name="style" checked />style</label></li></ul></div><div class="dropdown" data-filter="applicabilities" tabindex="-1"><button type="button" class="btn-default dropdown-toggle">Applicability <span id="applicabilities-count" class="badge">2</span> <span class="caret"></span></button><ul class="dropdown-menu"><li class="checkbox"><button class="reset-all">All</button></li><li class="checkbox"><button class="reset-none">None</button></li><li role="separator" class="divider"></li><li class="checkbox"><label><input type="checkbox" name="NotMachineApplicable" checked />NotMachineApplicable</label></li><li class="checkbox"><label><input type="checkbox" name="MachineApplicable" checked />MachineApplicable</label></li></ul></div></div><div class="search-control"><label class="input-group-addon" id="filter-label" for="search-input">Filter:</label><input type="text" class="form-control filter-input" placeholder="Keywords or search string (`S` or `/` to focus)" id="search-input" /><button id="filter-clear" type="button">Clear</button></div><div class="btn-group expansion-group"><button title="Collapse All" class="btn-default expansion-control" type="button" id="collapse-all"><span class="glyphicon glyphicon-collapse-up"></span></button><button title="Expand All" class="btn-default expansion-control" type="button" id="expand-all"><span class="glyphicon glyphicon-collapse-down"></span></button></div></div><article id="fixable_style"><input id="label-fixable_style" type="checkbox"><label for="label-fixable_style"><h2 class="lint-title"><div class="panel-title-name" id="lint-fixable_style">fixable_style
<a href="#fixable_style" class="anchor label">&para;</a> <a href="" class="copy-to-clipboard anchor label">&#128203;</a></div><span class="label lint-group group-style">style</span> <span class="label lint-level level-warn">warn</span> <span class="label doc-folding"></span></h2></label><div class="lint-docs"><div class="lint-doc-md"><h3>What it does</h3>
<p>Checks things.</p>
<h3>Why is this bad?</h3>
<p>Reasons.</p>
<h3>Known problems</h3>
<p>None.</p>
<h3>Example</h3>
<pre><code class="language-rust">let value = 1;
</code></pre>
<h3>Use instead</h3>
<pre><code class="language-rust">let value = 2;
</code></pre>
</div><div class="lint-additional-info"><div>Applicability: <span class="label applicability">MachineApplicable</span><a href="https://doc.rust-lang.org/nightly/nightly-rustc/rustc_lint_defs/enum.Applicability.html#variants">(?)</a></div><a href="https://github.com/sagan-software/dylints/issues?q=is%3Aissue+fixable_style">Related Issues</a><a href="https://github.com/sagan-software/dylints/blob/main/lints/style/fixable_style/src/lib.rs">View Source</a>
                    </div></div></article><article id="serde_unregistered"><input id="label-serde_unregistered" type="checkbox"><label for="label-serde_unregistered"><h2 class="lint-title"><div class="panel-title-name" id="lint-serde_unregistered">serde_unregistered
<a href="#serde_unregistered" class="anchor label">&para;</a> <a href="" class="copy-to-clipboard anchor label">&#128203;</a></div><span class="label lint-group group-serde">serde</span> <span class="label lint-level level-none">none</span> <span class="label doc-folding"></span></h2></label><div class="lint-docs"><div class="lint-doc-md"><h3>What it does</h3>
<p>Checks things.</p>
<h3>Why is this bad?</h3>
<p>Reasons.</p>
<h3>Known problems</h3>
<p>None.</p>
<h3>Example</h3>
<pre><code class="language-rust">let value = 1;
</code></pre>
<h3>Use instead</h3>
<pre><code class="language-rust">let value = 2;
</code></pre>
</div><div class="lint-additional-info"><div>Applicability: <span class="label applicability">NotMachineApplicable</span><a href="https://doc.rust-lang.org/nightly/nightly-rustc/rustc_lint_defs/enum.Applicability.html#variants">(?)</a></div><a href="https://github.com/sagan-software/dylints/issues?q=is%3Aissue+serde_unregistered">Related Issues</a><a href="https://github.com/sagan-software/dylints/blob/main/lints/crates/serde/serde-unregistered/src/lib.rs">View Source</a>
                    </div></div></article></div><a aria-label="View source on GitHub" class="github-corner" href="https://github.com/sagan-software/dylints" rel="noopener noreferrer" target="_blank"><svg width="80" height="80" viewBox="0 0 250 250" style="position: absolute; top: 0; border: 0; right: 0" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z" fill="var(--theme-color)"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg></a></body></html>
